# virtual_printer_farm

./: .gitignore  Cargo.toml  Dockerfile  Pipfile  README.md  create_printer.sh  docker-compose.yml  main.py  main.rs  printers.yml
.github/workflows/: main.yml
src/: main.rs
