[package]
name = "virtual_printer_farm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
postgres = { version = "0.19.4" }

[[bin]]
name = "virtual_printer_farm"
path = "main.rs"
